# specweave

./: .gitignore  README.md  pyproject.toml  specweave.sspec
.sovereignspec/: constitution.md  sovereignspec.yaml
.sovereignspec/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md
.sovereignspec/agents/opencode/: artifacts.json
.sovereignspec/graph/: graph.json
.sovereignspec/memory/: specweave.db
.sovereignspec/specs/: a2a-mcp-gateway.sspec  core-engine.sspec  interface-layer.sspec  neuro-symbolic-kg.sspec  persistence-layer.sspec  self-verifying-compiler.sspec  speculative-reasoning.sspec
.sovereignspec/tasks/: a2a-mcp-gateway-tasks.md  core-engine-tasks.md  interface-layer-tasks.md  neuro-symbolic-kg-tasks.md  persistence-layer-tasks.md  self-verifying-compiler-tasks.md  speculative-reasoning-tasks.md
interface/: package-lock.json  package.json
interface/src/app/: layout.tsx  page.tsx
interface/src/components/: sidebar.tsx  spec-graph.tsx
interface/src/lib/: api.ts
interface/src/types/: index.ts
src/specweave/: __main__.py  auth.py  cli.py  config.py  main.py  trust.py
src/specweave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/specweave/api/: __init__.py  gateway.py  health.py  specs.py
src/specweave/compiler/: __init__.py  gates.py  pipeline.py  steps.py
src/specweave/detection/: __init__.py  contradiction.py  drift.py  models.py
tests/: conftest.py  test_api.py  test_api_specs.py  test_auth.py  test_compiler.py  test_models.py  test_neuro_symbolic.py  test_persistence.py  test_speculative.py  test_trust.py
(+32 files in other folders)
