[project]
name = "specweave"
version = "2.0.0"
description = "Self-verifying, speculative, multi-agent spec engine with neuro-symbolic reasoning"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.9",
    "pydantic-settings",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "chromadb>=0.5",
    "networkx>=3.3",
    "ollama>=0.4",
    "pyyaml>=6.0",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
